# learn-actix

./: .gitignore  Cargo.toml  README.md
db/: learn-actix.db
handlers/: Cargo.toml
handlers/src/: database.rs  formatter.rs  lib.rs  log_config.rs
migrations/2021-11-13-220139_create_users/: up.sql
service/: Cargo.toml
service/src/: routers.rs
service/src/routers/examples/: mod.rs  users.rs
service/src/routers/users/: dao.rs  mod.rs  resource.rs  routers.rs
src/: main.rs  routers.rs  schema.rs
src/routers/v1/: mod.rs
src/routers/v1/examples/: init.rs
