[package]
name = "handlers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = "0.4.19"
log = "0.4.14"
fern = "0.6.0"
serde_json = "1.0.70"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
rusqlite = "0.26.1"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }